--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <title>Josh Portfolio</title>
 </head>
 
-<!--TEST-->
+<!--UPDATE-->
 <body>
  <header class="container-fluid bg1">
     <div class="container">
